--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
     <script src="script.js"></script>
 </body>
     <div class="container">
-        <h1>Enviando Abrazo </h1>
+        <h1>Enviando Abrazo virtual</h1>
         <img src="penguin.svg" alt="">
         <p id="loading-message">Cargando...</p>
         <div class="box">
